몽구스 연결부분 인덱스로 옮김, 프론트 부분 영어 한글로 수정

--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -15,7 +15,7 @@
     <!-- 스크린에 output해줌. -->
 
     <div class="container">
-        <h1 class="mb-4">New Article</h1>
+        <h1 class="mb-4">글쓰기</h1>
 
         <!--form의 action과 method를 정해줘야한다 -->
         <!-- 생성하는 거기 때문에 post로 한다. -->
