--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -1,23 +1,23 @@
 <div class="form-group mb-3">
-    <label for="title">Title</label>
+    <label for="title">제목</label>
     <!-- required 해줘서 이거 받아올 거라는 거를 알려줘야한다. -->
     <input required value="<%=article.title%>" type="text" name="title" id="title" class="form-control">
 </div>
 
 <div class="form-group mb-3">
-    <label for="description">Description</label>
+    <label for="description">이름</label>
     <textarea name="description" id="description" class="form-control">
         <%= article.discription %>
     </textarea>
 </div>
 
 <div class="form-group mb-3">
-    <label for="markdown">Markdown</label>
+    <label for="markdown">내용</label>
     <textarea required name="markdown" id="markdown" class="form-control">
         <%= article.markdown %>
     </textarea>
 </div>
 
 <!-- / index 페이지로 돌아가기 (취소) -->
-<a href="/"  class="btn btn-secondary">Cancel</a>
-<button type="submit" class="btn btn-primary">Save</button>
+<a href="/"  class="btn btn-secondary">취소</a>
+<button type="submit" class="btn btn-primary">저장</button>
