--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -16,9 +16,9 @@
 
     <div class="container">
         <!-- bootstrap margin bottom 4 -->
-        <h1 class="mb-4">Blog Articles</h1>
+        <h1 class="mb-4">블로그</h1>
         <!-- 새 게시글 버튼, success 클래스는 부트스트랩 초록색 -->
-        <a href="/articles/new" class="btn btn-success">New Article</a>
+        <a href="/articles/new" class="btn btn-success">글쓰기</a>
 
         <!-- 기호로 자바스크립트 사용하기-->
         <!-- forEach function 반복문 돌리기 -->
@@ -40,7 +40,7 @@
                         <%= article.description %>
                     </div>
                     <!-- 게시글 상세페이지 들어가기 -->
-                    <a href="articles/<%= article.id%>" class="btn btn-primary">Read More</a>
+                    <a href="articles/<%= article.id%>" class="btn btn-primary">더보기</a>
                 </div>
             </div>
             <% }) %>
