--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Blog</title>
+    <title>블로그</title>
 </head>
 
 <body>
@@ -23,9 +23,9 @@
           
         </div>
         <!-- 전체보기 버튼 -->
-        <a href="/" class="btn btn-secondary">All articles</a>
+        <a href="/" class="btn btn-secondary">전체글 보기</a>
         <!-- 편집버튼 -->
-        <a href="/articles/edit/<%article.id%>" class="btn btn-info">Edit</a>
+        <a href="/articles/edit/<%article.id%>" class="btn btn-info">수정하기</a>
 
         <div>
             <%= article.markdown %>
