--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -17,6 +17,11 @@
         <%= article.markdown %>
     </textarea>
 </div>
+<div class="form-group mb-3">
+    <label for="password">비밀번호</label>
+    <!-- required 해줘서 이거 받아올 거라는 거를 알려줘야한다. -->
+    <input required value="<%=article.password%>" type="password" name="password" id="password" class="form-control">
+</div>
 
 <!-- / index 페이지로 돌아가기 (취소) -->
 <a href="/"  class="btn btn-secondary">취소</a>
